
syntax = "proto3";

option csharp_namespace = "EcommerceServiceOperation";

package categoryService;

service CategoryService {
  
  rpc Create (CategoryRequest) returns (CategoryResponse);

}

message CategoryRequest {
  string name = 1;
  bool status = 2;
}

message CategoryResponse {
  string id = 1;
  string code = 2;
  bool status = 3;
}
